<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_nombre"
        android:hint="@string/ht_nombre"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_telefono"
        android:layout_toEndOf="@+id/et_nombre"
        android:hint="@string/ht_telefono"
        android:layout_alignTop="@+id/et_nombre"
        android:layout_toRightOf="@+id/et_nombre" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_fnac"
        android:hint="@string/ht_fnac"
        android:layout_below="@+id/et_nombre" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_jug"
        android:id="@+id/button"
        android:layout_toEndOf="@+id/et_fnac"
        android:onClick="alta"
        android:layout_alignTop="@+id/et_fnac"
        android:layout_toRightOf="@+id/et_fnac"
        android:layout_alignBottom="@+id/et_fnac"
        android:layout_alignRight="@+id/et_telefono"
        android:layout_alignEnd="@+id/et_telefono" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="--------------------------------------------------------------------------"
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_idjugador"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/ht_idjugador" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_contrincante"
        android:layout_alignBottom="@+id/et_idjugador"
        android:layout_toRightOf="@+id/et_idjugador"
        android:layout_toEndOf="@+id/et_idjugador"
        android:hint="@string/ht_contrincante" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_valoracion"
        android:layout_below="@+id/et_idjugador"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/ht_valoracion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_par"
        android:id="@+id/button2"
        android:layout_alignBottom="@+id/et_valoracion"
        android:layout_alignLeft="@+id/et_contrincante"
        android:layout_alignStart="@+id/et_contrincante"
        android:layout_alignTop="@+id/et_valoracion"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:onClick="altaPartido" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listaPrincipal"
        android:layout_below="@+id/et_valoracion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
